Added new challenge solution, better organized packages